<resources>
    <string name="app_name">QuizMania</string>
    <string name="login_success">Login Successful</string>
    <string name="login_failed">Username or password incorrect</string>
    <string name="registration_success">Your account has been registered</string>
    <string name="registration_failed">Failed to register account</string>
    <string name="google_signin_success">Google sign in Succeeded</string>
    <string name="google_signin_fail">Google sign in failed</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="google">Google</string>
    <string name="quiz_mania">Quiz Mania</string>
    <string name="register_me">Register me</string>
    <string name="username_needed">Username is needed</string>
    <string name="email_not_valid">Email needs to be valid</string>
    <string name="email_needed">Email is needed</string>
    <string name="password_needed">Password is needed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question_null_error_message">An error came up fetching the data</string>
    <string name="quiz_avaliable">Start Quiz</string>
    <string name="quiz_unavaliable">Loading data</string>
    <string name="quick_match">Quick Play</string>
    <string name="single_player">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="profile">Profile</string>
    <string name="dark_mode">Dark mode</string>
    <string name="change_username">Change username</string>
    <string name="statistics">Statistics</string>
    <string name="change_password">Change password</string>
    <string name="question_type">Question type</string>
    <string name="play">Play</string>
    <string name="difficulty">Difficulty</string>
    <string name="categories">Categories</string>
    <string name="totals">Totals</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="favorite_category">Favorite Category</string>
    <string name="sign_out">Sign out</string>
    <string name="out_of_10">%d out of 10</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_mismatch">Password does not match</string>
    <string name="no_usernames_match">Usernames don\'t match</string>
    <string name="username_same_as_old">Username can\'t be the same as the old one</string>
    <string name="matches">Matches</string>
    <string name="answerdCorrect">Answered correct:</string>
    <string name="avgTimeToAnswer">average time to answer</string>
</resources>
