<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.StatisticsActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:text="@string/totals"/>
    <TextView
        android:id="@+id/total_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Right:"/>
    <TextView
        android:id="@+id/total_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wrong:"/>
    <TextView
        android:id="@+id/total_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ratio:"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:text="@string/multiplayer"/>
    <TextView
        android:id="@+id/multi_player_wins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wins:"/>
    <TextView
        android:id="@+id/multi_player_losses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Losses:"/>
    <TextView
        android:id="@+id/multi_player_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ratios:"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:text="@string/easy"/>
    <TextView
        android:id="@+id/easy_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Right:"/>
    <TextView
        android:id="@+id/easy_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wrong:"/>
    <TextView
        android:id="@+id/easy_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ratio:"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:text="@string/medium" />
    <TextView
        android:id="@+id/medium_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Right:"/>
    <TextView
        android:id="@+id/medium_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wrong:"/>
    <TextView
        android:id="@+id/medium_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ratio:"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:text="@string/hard"/>
    <TextView
        android:id="@+id/hard_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Right:"/>
    <TextView
        android:id="@+id/hard_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wrong:"/>
    <TextView
        android:id="@+id/hard_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ratio:"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:text="@string/favorite_category"/>
    <TextView
        android:id="@+id/favorite_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Category name"/>
</LinearLayout>