<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".UI.SelectionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pick a category and a difficulty"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <!-- CATEGORY -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"/>

    <Spinner
        android:id="@+id/category_dropdown"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:overlapAnchor="false"
        android:layout_marginBottom="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />

    <!-- DIFFICULTY -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/difficulty"/>

    <Spinner
        android:id="@+id/difficulty_dropdown"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:overlapAnchor="false"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />


    <Button
        android:id="@+id/sp_play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_avaliable"
        android:textAllCaps="false"
        />

</LinearLayout>